<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bcit.com7082.group1.activity.SearchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_centerVertical="true"
        android:text="Keywords: "
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvFromDateTime"
        android:text="From: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etFromDateTime"
        android:layout_alignStart="@+id/btnCancel"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etFromDateTime"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvToDateTime"
        android:text="To: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_marginTop="98dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etToDateTime"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvToDateTime"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp"
        android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:text="Keywords: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go"
        android:layout_centerVertical="true"
        android:ems="10"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCancel"
        android:text="Cancel"
        android:onClick="cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp" />

    <Button
        android:id="@+id/go"
        android:onClick="go"
        android:text="Go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_marginEnd="128dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="268dp"
        android:text="Latitude" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="173dp"
        android:text="Longitude" />

    <EditText
        android:id="@+id/etLatitudeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="264dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etLatitudeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="211dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etLongitudeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="146dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etLongitudeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="90dp"
        android:ems="10"
        android:inputType="textPersonName" />
</RelativeLayout>